dev_redis/deployment_dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops3030
  labels:
    app: devops3030
    tier: devops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops3030
  template:
    metadata:
      labels:
        app: devops3030
    spec:
      containers:
      - name: devops3030
        imagePullPolicy: Never
        image: docker.io/library/devops-303-2021b3-dev_app:latest
        ports:
          - containerPort: 8884
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
