dev_redis/service_dev.yml
kind: Service
apiVersion: v1
metadata:
 name: devops3030
spec:
  selector:
    app: devops3030
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8884
#      targetPort: 8080
