dev_redis/ingress_dev.yml
# SOURCE: https://cloud.google.com/kubernetes-engine/docs/tutorials/guestbook
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops3030
spec:
  rules:
    - host: devops3030.mourgues-paul
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops3030
                port:
                  number: 80
